--- a/pages/index.html
+++ b/pages/index.html
@@ -457,7 +457,7 @@
 
       <script type="module" src="../main.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-      <script src="../assets/js/swiper.js"></script>
+      <script type="module" src="../assets/js/swiper.js"></script>
 </body>
 
 </html>
