--- a/pages/index.html
+++ b/pages/index.html
@@ -103,10 +103,10 @@
       <ul class="row gx-0 gx-md-12 gy-24 gy-md-48 list-unstyled">
 
         <li class="col-12 col-md-4 d-flex flex-column">
-          <h3 class="fs-32 fs-md-48 pb-8 pb-md-12 mb-16 mb-md-12 border-bottom border-3 border-primary">19 MAY 2023</h3>
+          <h3 class="fs-32 fs-md-24 fs-lg-36 fs-xl-48 pb-8 pb-md-12 mb-16 mb-md-12 border-bottom border-3 border-primary">19 MAY 2023</h3>
           <img class="activity-img img-fluid w-100 mb-8 mb-md-12" src="../assets/images/01.jpg" alt="">
 
-          <h4 class="fs-18 fs-md-24 fw-bold mb-8 mb-md-12">邪典電影派對——房間</h4>
+          <h4 class="fs-18 fs-md-20 fs-lg-24 fw-bold mb-8 mb-md-12">邪典電影派對——房間</h4>
           <div class="flex-body">
             <p>你有聽說過「大災難家」裡面的主角 Tommy Wiseau 製作的「史上最爛的電影」——房間嗎？在美國甚至演變成一種邪教、一種派對的形式，在電影播放的對著螢幕丟湯匙都...</p>
             <div
@@ -117,13 +117,13 @@
                 <a class="fs-16 fw-bold ms-4" href="#">社群活動</a>
               </div>
 
-              <div class="d-flex align-items-center">
-                <a class="fs-16 fw-bold me-4" href="#">
-                  開賣中
+              <div class="position-relative sell">
+                <a class="d-flex align-items-center" href="#">
+                  <p class="fs-16 fw-bold me-4 mb-0">開賣中</p>
+                  <span class="material-symbols-outlined fs-16 fw-bold">
+                    double_arrow
+                  </span>
                 </a>
-                <span class="material-symbols-outlined fs-16">
-                  double_arrow
-                </span>
               </div>
             </div>
           </div>
@@ -132,9 +132,9 @@
 
         <li class="col-12 col-md-4 d-flex flex-column">
 
-          <h3 class="fs-32 fs-md-48 pb-8 pb-md-12 mb-16 mb-md-12 border-bottom border-3 border-primary">23 MAY 2023</h3>
+          <h3 class="fs-32 fs-md-24 fs-lg-36 fs-xl-48 pb-8 pb-md-12 mb-16 mb-md-12 border-bottom border-3 border-primary">23 MAY 2023</h3>
           <img class="activity-img img-fluid w-100 mb-8 mb-md-12" src="../assets/images/02.jpg" alt="">
-          <h4 class="fs-18 fs-md-24 fw-bold mb-8 mb-md-12">怪舞俱樂部</h4>
+          <h4 class="fs-18 fs-md-20 fs-lg-24 fw-bold mb-8 mb-md-12">怪舞俱樂部</h4>
 
           <div class="flex-body">
             <p>覺得自己的舞蹈細胞異於常人？每次隨著音樂起舞身邊的人總是露出無法理解的表情？來這裡就對了！來參加這場一起跳舞的聚會，也會在每一次的舞會中選出舞步最怪的...</p>
@@ -147,13 +147,13 @@
                 <a class="fs-16 fw-bold ms-4" href="#">演出</a>
               </div>
 
-              <div class="d-flex align-items-center">
-                <a class="fs-16 fw-bold me-4" href="#">
-                  開賣中
+              <div class="position-relative sell">
+                <a class="d-flex align-items-center" href="#">
+                  <p class="fs-16 fw-bold me-4 mb-0">開賣中</p>
+                  <span class="material-symbols-outlined fs-16 fw-bold">
+                    double_arrow
+                  </span>
                 </a>
-                <span class="material-symbols-outlined fs-16">
-                  double_arrow
-                </span>
               </div>
 
             </div>
@@ -163,9 +163,9 @@
         </li>
 
         <li class="col-12 col-md-4 d-flex flex-column">
-          <h3 class="fs-32 fs-md-48 pb-8 pb-md-12 mb-16 mb-md-12 border-bottom border-3 border-primary">30 MAY 2023</h3>
+          <h3 class="fs-32 fs-md-24 fs-lg-36 fs-xl-48 pb-8 pb-md-12 mb-16 mb-md-12 border-bottom border-3 border-primary">30 MAY 2023</h3>
           <img class="activity-img img-fluid w-100 mb-8 mb-md-12" src="../assets/images/03.jpg" alt="">
-          <h4 class="fs-18 fs-md-24 fw-bold mb-8 mb-md-12">哈利波特馬拉松</h4>
+          <h4 class="fs-18 fs-md-20 fs-lg-24 fw-bold mb-8 mb-md-12">哈利波特馬拉松</h4>
           <div class="flex-body">
             <p>每次身邊有人開啟哈利波特的話題，自己永遠都是聽不懂的那個麻瓜？看大家在討論魁地奇、用咒語鬥法的時候，自己永遠是陪笑的那個人？穿好你的法袍、帶上你的法杖...</p>
             <div
@@ -176,23 +176,23 @@
                 <a class="fs-16 fw-bold ms-4" href="#">聯誼</a>
               </div>
 
-              <div class="d-flex align-items-center">
-                <a class="fs-16 fw-bold me-4" href="#">
-                  開賣中
+              <div class="position-relative sell">
+                <a class="d-flex align-items-center" href="#">
+                  <p class="fs-16 fw-bold me-4 mb-0">開賣中</p>
+                  <span class="material-symbols-outlined fs-16 fw-bold">
+                    double_arrow
+                  </span>
                 </a>
-                <span class="material-symbols-outlined fs-16">
-                  double_arrow
-                </span>
               </div>
             </div>
           </div>
         </li>
 
         <li class="col-12 col-md-4 d-flex flex-column">
-          <h3 class="fs-32 fs-md-48 pb-8 pb-md-12 mb-16 mb-md-12 border-bottom border-3 border-primary">12 June 2023
+          <h3 class="fs-32 fs-md-24 fs-lg-36 fs-xl-48 pb-8 pb-md-12 mb-16 mb-md-12 border-bottom border-3 border-primary">12 June 2023
           </h3>
           <img class="activity-img img-fluid w-100 mb-8 mb-md-12" src="../assets/images/04.jpg" alt="">
-          <h4 class="fs-18 fs-md-24 fw-bold mb-8 mb-md-12">皮卡丘排球大賽</h4>
+          <h4 class="fs-18 fs-md-20 fs-lg-24 fw-bold mb-8 mb-md-12">皮卡丘排球大賽</h4>
           <div class="flex-body">
             <p>還記得小時候玩的小遊戲嗎？總是有朋友吹噓自己獨孤求敗、只求一敗？是時候該展現真正的實力了！本活動採用瑞士制賽程，以絕對公平的方式進行，是時候該證明自己...</p>
             <div
@@ -203,23 +203,23 @@
                 <a class="fs-16 fw-bold ms-4" href="#">遊戲競賽</a>
               </div>
 
-              <div class="d-flex align-items-center">
-                <a class="fs-16 fw-bold me-4" href="#">
-                  開賣中
+              <div class="position-relative sell">
+                <a class="d-flex align-items-center" href="#">
+                  <p class="fs-16 fw-bold me-4 mb-0">開賣中</p>
+                  <span class="material-symbols-outlined fs-16 fw-bold">
+                    double_arrow
+                  </span>
                 </a>
-                <span class="material-symbols-outlined fs-16">
-                  double_arrow
-                </span>
               </div>
             </div>
           </div>
         </li>
 
         <li class="col-12 col-md-4 d-flex flex-column">
-          <h3 class="fs-32 fs-md-48 pb-8 pb-md-12 mb-16 mb-md-12 border-bottom border-3 border-primary">25 June 2023
+          <h3 class="fs-32 fs-md-24 fs-lg-36 fs-xl-48 pb-8 pb-md-12 mb-16 mb-md-12 border-bottom border-3 border-primary">25 June 2023
           </h3>
           <img class="activity-img img-fluid w-100 mb-8 mb-md-12" src="../assets/images/05.jpg" alt="">
-          <h4 class="fs-18 fs-md-24 fw-bold mb-8 mb-md-12">酒精路跑</h4>
+          <h4 class="fs-18 fs-md-20 fs-lg-24 fw-bold mb-8 mb-md-12">酒精路跑</h4>
           <div class="flex-body">
             <p>身邊總是有對自己酒量有高度自信的朋友嗎？拉著他/她一起來參加酒精路跑吧！一起拍下第一杯直到倒下為止的照片，一起喝遍市區內各家極具品味的酒吧。
             </p>
@@ -231,22 +231,23 @@
                 <a class="fs-16 fw-bold ms-4" href="#">社群活動</a>
               </div>
 
-              <div class="d-flex align-items-center">
-                <a class="fs-16 fw-bold me-4" href="#">
-                  開賣中
+              <div class="position-relative sell">
+                <a class="d-flex align-items-center" href="#">
+                  <p class="fs-16 fw-bold me-4 mb-0">開賣中</p>
+                  <span class="material-symbols-outlined fs-16 fw-bold">
+                    double_arrow
+                  </span>
                 </a>
-                <span class="material-symbols-outlined fs-16">
-                  double_arrow
-                </span>
               </div>
+
             </div>
           </div>
         </li>
 
         <li class="col-12 col-md-4 d-flex flex-column">
-          <h3 class="fs-32 fs-md-48 pb-8 pb-md-12 mb-16 mb-md-12 border-bottom border-3 border-primary">9 July 2023</h3>
+          <h3 class="fs-32 fs-md-24 fs-lg-36 fs-xl-48 pb-8 pb-md-12 mb-16 mb-md-12 border-bottom border-3 border-primary">9 July 2023</h3>
           <img class="activity-img img-fluid w-100 mb-8 mb-md-12" src="../assets/images/06.jpg" alt="">
-          <h4 class="fs-18 fs-md-24 fw-bold mb-8 mb-md-12">展覽——我的房間</h4>
+          <h4 class="fs-18 fs-md-20 fs-lg-24 fw-bold mb-8 mb-md-12">展覽——我的房間</h4>
           <div class="flex-body">
             <p>每個人的房間總會有那麼一兩個能代表自己的物事，或許是再平凡不過的牙刷、馬克杯，或許有那些別人的房間從沒出現過的小東西——那些能定義自己的特別的東西。</p>
             <div
@@ -257,13 +258,13 @@
                 <a class="fs-16 fw-bold ms-4" href="#">展覽</a>
               </div>
 
-              <div class="d-flex align-items-center">
-                <a class="fs-16 fw-bold me-4" href="#">
-                  開賣中
+              <div class="position-relative sell">
+                <a class="d-flex align-items-center" href="#">
+                  <p class="fs-16 fw-bold me-4 mb-0">開賣中</p>
+                  <span class="material-symbols-outlined fs-16 fw-bold">
+                    double_arrow
+                  </span>
                 </a>
-                <span class="material-symbols-outlined fs-16">
-                  double_arrow
-                </span>
               </div>
             </div>
           </div>
@@ -292,14 +293,20 @@
         <div class="col-12 col-md-5 d-flex flex-column">
           <h2 class="fs-18 fs-md-32 mb-8 mb-md-16 fw-bold">切特居批踢</h2>
           <ul class="d-flex list-unstyled online-list mb-12 mb-md-32">
-            <li class="me-8 position-relative">
-              <h4 class="fs-14 fs-md-16 fw-bold py-4 px-16 px-lg-24 border border-1 border-primary">競賽</h4>
+            <li class="me-8">
+              <a class="btn btn-white py-4 px-16 px-lg-24 border border-1 border-primary rounded-0 position-relative" href="#">
+                <h4 class="fs-14 fs-md-16 fw-bold mb-0">競賽</h4>
+              </a>
             </li>
-            <li class="me-8 position-relative">
-              <h4 class="fs-14 fs-md-16 fw-bold py-4 px-16 px-lg-24 border border-1 border-primary">科技</h4>
+            <li class="me-8">
+              <a class="btn btn-white py-4 px-16 px-lg-24 border border-1 border-primary rounded-0 position-relative" href="#">
+                <h4 class="fs-14 fs-md-16 fw-bold mb-0">科技</h4>
+              </a>
             </li>
-            <li class="me-8 position-relative">
-              <h4 class="fs-14 fs-md-16 fw-bold py-4 px-16 px-lg-24 border border-1 border-primary">有趣</h4>
+            <li class="me-8">
+              <a class="btn btn-white py-4 px-16 px-lg-24 border border-1 border-primary rounded-0 position-relative" href="#">
+                <h4 class="fs-14 fs-md-16 fw-bold mb-0">有趣</h4>
+              </a>
             </li>
           </ul>
           <p class="mb-12 mb-md-32">最近網路上很流行的AI程式 ChatGPT，可以用來聊天或是查詢、整理各種資料，不同的應用方式如雨後春筍般冒出來。
