--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <img class="mb-8 mb-md-12"
               src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023week6/cate02.svg"
               alt="">
-            <h3 class="fs-16 fs-md-24 text-center mb-0">演出</h3>
+            <h3 class="fs-16 fs-md-24 text-center mb-0">聯誼</h3>
           </div>
         </div>
 
@@ -121,7 +121,7 @@
             <img class="mb-8 mb-md-12"
               src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023week6/cate03.svg"
               alt="">
-            <h3 class="fs-16 fs-md-24 text-center mb-0">演出</h3>
+            <h3 class="fs-16 fs-md-24 text-center mb-0">展覽</h3>
           </div>
         </div>
 
@@ -131,7 +131,7 @@
             <img class="mb-8 mb-md-12"
               src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023week6/cate04.svg"
               alt="">
-            <h3 class="fs-16 fs-md-24 text-center mb-0">演出</h3>
+            <h3 class="fs-16 fs-md-24 text-center mb-0">美食</h3>
           </div>
         </div>
 
@@ -141,7 +141,7 @@
             <img class="mb-8 mb-md-12"
               src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023week6/cate05.svg"
               alt="">
-            <h3 class="fs-16 fs-md-24 text-center mb-0">演出</h3>
+            <h3 class="fs-16 fs-md-24 text-center mb-0">戶外</h3>
           </div>
         </div>
 
